--- a/src/SingleCategory/SingleCategory.css
+++ b/src/SingleCategory/SingleCategory.css
@@ -1,21 +1,43 @@
 .each-product {
-  border: 1px solid black;
+    border: 1px solid black;
 }
 
-.single-category-container {
-  border: 10px solid blue;
-  padding: 30px;
+.single-category-container-zz {
+    /* border: 10px solid blue; */
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 40px;
 }
 
 .rating-box {
-  border: 1px solid black;
-  position: absolute;
-  height: 40px;
-  top: 240px;
-  /* left: 10px; */
-  padding: 10px;
+    border: 1px solid black;
+    position: absolute;
+    line-height: 20px;
+    top: 240px;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
 }
 
-.single-category-card-img {
-  /* border: 10px solid red; */
+.star-icon-category-list {
+    color: green;
+    margin-left: 10px;
+    margin-right: 10px !important;
+}
+
+.selected-cat-name {
+    width: 350px;
+    margin-right: 40px;
+    margin-bottom: 30px;
+}
+
+.to-point {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.not-point {
+    font-size: 18px;
 }
