--- a/src/Carousel/Carousel.css
+++ b/src/Carousel/Carousel.css
@@ -1,41 +1,87 @@
-.carousel-container {
-  /* border: 10px solid black; */
-  height: 70vh;
-  display: flex;
-  align-content: center;
-  width: 70vw;
-  position: relative;
-
-  /* justify-content: center; */
-}
-
 .caro-main-box {
-  margin-top: 25px;
-
-  /* border: 10px solid red; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    /* border: 10px solid black; */
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
+
+.carousel-container {
+    /* border: 10px solid red; */
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-radius: 0.375rem;
+    position: relative;
+}
+
 .image {
-  /* border: 1px solid black; */
-  height: inherit;
-  width: 110%;
+    /* border: 10px solid black; */
+    height: 100%;
+    background-attachment: fixed;
+    border-radius: 0.375rem;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-size: cover;
+    width: 100%;
 }
 
 .left-slide-btn {
-  position: absolute;
-  height: 20vh;
-  width: 40px;
-  z-index: 1;
-  top: calc(50% - 10vh);
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    z-index: 1;
+    left: 5px;
+    border: 1px solid #eff3f6;
+    color: black;
+    font-size: 22px;
+    border-radius: 30px;
+    background-color: #eff3f6;
+    top: calc(30vh - 20px);
 }
 
 .right-slide-btn {
-  position: absolute;
-  height: 20vh;
-  width: 40px;
-  z-index: 1;
-  right: 0%;
-  top: calc(50% - 10vh);
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    z-index: 1;
+    right: 5px;
+    border: 1px solid #eff3f6;
+    color: black;
+    font-size: 22px;
+    border-radius: 30px;
+    background-color: #eff3f6;
+    top: calc(30vh - 20px);
+}
+
+.text-on-carousel {
+    /* border: 10px solid red; */
+    position: absolute;
+    top: calc(20vh - 20px);
+    left: 5%;
+    height: 300px;
+    width: 400px;
+    color: white;
+}
+.lestest-trend-text {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.free-shipping-detail {
+    font-size: 25px;
+}
+
+.only-on-zyntra {
+    font-size: 25px;
+}
+
+.shop-now-carousel {
+    font-size: 22px;
+    border: 1px solid white;
+    display: block;
+    margin-top: 15px;
+    padding: 5px 20px;
+    border-radius: 0.375rem;
 }
