--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,4 +1,177 @@
 .footer {
-  border: 1px solid red;
-  height: 50vh;
+    border-top: 3px solid #eff3f6;
+    /* height: 120vh; */
+    display: flex;
+    justify-content: center;
+    padding-top: 30px !important;
+    padding-top: 50px;
+    align-items: center;
+    z-index: 10;
+    background-color: white;
+}
+
+.footer-main-content {
+    /* border: 10px solid blue; */
+    /* height: 100vh; */
+    /* width: 90vw; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 0px 30px;
+    /* padding: 20px; */
+    /* display: flex; */
+}
+
+.popular-searches {
+    /* border: 10px solid grey; */
+    padding: 20px 40px;
+    margin-top: 100px;
+    /* margin-bottom: 20px; */
+}
+
+/* .all-brands-in-footer {
+  border: 1px solid black;
+  margin-top: 20px;
+} */
+
+.all-brands-in-linein-footer {
+    padding-top: 10px;
+    /* border: 10px solid black; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.individual-brand-in-footer {
+    /* border: 1px solid red; */
+    padding: 5px;
+}
+
+.product-name-in-footer {
+    /* border: 1px solid black; */
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.footer-end {
+    /* border: 10px solid green; */
+    margin-top: 40px;
+    display: flex;
+    font-size: 20px;
+    padding: 20px;
+    justify-content: center;
+}
+
+.upper-footer-container {
+    /* border: 10px solid purple; */
+    /* background-color: aqua; */
+    display: flex;
+    flex: 1;
+    justify-content: space-around;
+}
+
+.online-main-container,
+.keep-in-touch-conatiner,
+.free-delivery-section {
+    /* border: 10px solid red; */
+    display: flex;
+    width: 300px;
+    /* flex: 1; */
+    /* justify-content: center; */
+}
+
+.keep-in-touch-conatiner {
+    justify-content: center;
+}
+
+.first-sec-free-delivery,
+.sec-section-free-delivery,
+.third-section-free-delivery {
+    flex: 1;
+    padding: 10px;
+    display: flex;
+    /* border: 5px solid green; */
+}
+
+.footer-delivery-img-1,
+.footer-delivery-img-2,
+.footer-delivery-img-3 {
+    height: 100px;
+    align-self: center;
+    margin-right: 20px;
+}
+
+.app-store-btn {
+    border-radius: 10px;
+    height: 50px;
+    width: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTte7x0MoQpTUKQn4yZaR-gEQk3sPC6mypjz42j65Co4VQ3IGp2xtqnqk0Srj3RHRISYng&usqp=CAU");
+}
+
+.play-store-btn-ff {
+    border-radius: 10px;
+    margin-right: 10px;
+    height: 50px;
+    width: 200px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVkcerZ1aWbPTE-gRQ9Pe7VFOk1rgaHBooyQ&usqp=CAU");
+}
+/* .app-store-btn:hover {
+  box-shadow: 2px 2px 4px black;
+} */
+
+.buttons-in-footer {
+    /* border: 1px solid black; */
+    margin-top: 10px;
+    display: flex;
+    cursor: pointer;
+    padding: 10px 10px 10px 0px;
+}
+
+.footer-icons-container {
+    /* border: 1px solid red; */
+    margin-top: 5px;
+    font-size: 30px;
+}
+
+.common-class {
+    margin-right: 20px;
+    cursor: pointer;
+    /* border: 1px solid blue; */
+}
+
+.online-shopping-main-conatiner {
+    /* border: 1px solid black; */
+    font-size: 17px;
+    margin-top: 30px;
+}
+
+.pop-text {
+    /* border: 1px solid red; */
+    margin-bottom: 20px;
+}
+
+.online-shopping {
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 22px;
+    /* margin-right: 30px; */
+}
+
+.list-of-products-in-footer {
+    font-size: 17px;
+    line-height: 30px;
+}
+
+.toast-header {
+    display: flex;
+}
+
+.extra-space {
+    flex: 1;
 }
