--- a/src/HeaderBar/HeaderBar.css
+++ b/src/HeaderBar/HeaderBar.css
@@ -1,74 +1,165 @@
 .header-bar {
-  border: 1px solid red;
-  height: 80px;
-  display: flex;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1;
-  background-color: white;
+    /* border: 1px solid red; */
+    height: 80px;
+    display: flex;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    padding: 10px 0px;
+    /* color: transparent; */
+    /* opacity: 0.7; */
+    z-index: 100;
+    /* background-color: ; */
+    background-color: white;
+    box-shadow: 4px 4px 16px #ecf4fa;
 }
 
 /* app name */
 
 .name-of-app {
-  /* border: 1px solid red; */
-  align-self: center;
-  font-size: 50px;
-  margin-left: 40px;
-  padding: 10px;
+    /* border: 1px solid red; */
+    align-self: center;
+    /* font-size: 50px; */
+    cursor: pointer;
 
-  background-image: linear-gradient(to right, rgb(255, 72, 0), blue);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
+    /* background-image: linear-gradient(to right, #b0525f, #953150); */
+    -webkit-background-clip: text;
+    background-clip: text;
+    /* color: transparent; */
+    color: black;
 }
 /* input-sec */
 
 .input-sec {
-  /* border: 1px solid red; */
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    /* border: 5px solid yellow; */
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
 }
 
-.input-bar {
-  /* border: 1px solid red; */
-  width: 70%;
-  font-size: 25px;
-  position: relative;
-  padding: 10px;
-  padding-left: 50px;
-}
 .search-icon {
-  left: 30px;
-  position: relative;
-  z-index: 1;
+    left: 35px;
+    position: relative;
+    z-index: 1;
 }
 
+.input-header-z {
+    width: 50vw;
+    height: 45px;
+    font-size: 100px;
+}
+.input-fonts {
+    font-size: 20px;
+}
 /* side -icon section */
 
 .profile-sec,
 .wishlist-section,
 .bag-section,
 .help-section {
-  /* border: 1px solid black; */
-  align-self: center;
-  text-align: center;
-  margin-right: 40px;
-  cursor: pointer;
-  line-height: 25px;
-  padding-top: 5px;
+    /* border: 1px solid black; */
+    align-self: center;
+    margin-left: 40px;
+    cursor: pointer;
+    line-height: 22px;
+    padding-top: 5px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .profile-icon,
 .whishlist-icon,
-.bag-icon,
+.bag-icon-header,
 .help-icon {
-  font-size: 22px;
+    font-size: 22px;
 }
 
 .help-section {
-  margin-right: 50px;
+    margin-right: 50px;
+}
+
+.serach-drop-down-img {
+    align-self: center;
+    height: 30px;
+    width: 35px;
+    margin-right: 15px;
+}
+
+.search-items-main-container {
+    display: flex;
+    border-bottom: 1px solid grey;
+    margin-bottom: 30px;
+}
+
+.z-dropdown-container {
+    position: fixed;
+    display: flex;
+    z-index: 100;
+    top: calc(65px - 2px);
+    left: calc(25vw - 6px);
+}
+
+.main-box-dropdown {
+    width: 50vw;
+    position: relative;
+    box-shadow: 4px 4px 8px #cdcecf;
+}
+
+.single-product-in-search-dropdown {
+    /* border: 1px solid red; */
+
+    font-size: 20px;
+    line-height: 60px;
+    display: flex;
+}
+
+.header-profile-auth {
+}
+
+.header-left,
+.header-right {
+    flex: 1;
+}
+
+.header-left {
+    padding-left: 40px;
+}
+
+.header-right {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 40px;
+}
+
+.user-name {
+    background-color: #eff3f6;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    font-size: 1.25rem;
+}
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+/* aanu jo ne aa uper nu */
+
+.position-logout-zz {
+    background-color: black;
+    border: 1px solid red !important;
+}
+.z {
+    background-color: black !important;
+    transform: translate(-10px, 60px) !important;
+    text-align: center;
+}
+
+.z > a {
+    color: #faedeb !important;
+}
+.z > a:hover {
+    background-color: black !important;
 }
