--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -1,35 +1,44 @@
 .products-container {
-  /* border: 10px solid red; */
-  padding: 20px 30px;
+    /* border: 20px solid red; */
+    display: flex;
+    padding: 30px 0px 100px 0px;
+    justify-content: center;
 }
 
+.inside-product-container {
+    /* border: 10px solid blue; */
+    width: 80vw;
+}
 .single-card {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .single-card:hover {
-  box-shadow: 4px 4px 16px black;
+    /* box-shadow: 4px 4px 16px black; */
 }
 .card-img {
-  height: 300px;
+    height: 300px;
 }
 
 .card-body {
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .category-name {
-  font-size: 25px;
-  /* que */
-  /* aa ahiya thoduk aam aadu avdu lage font size 30 rakhia to 25 rakhu chu to kai vandho nathi */
+    font-size: 20px;
+    /* que */
+    /* aa ahiya thoduk aam aadu avdu lage font size 30 rakhia to 25 rakhu chu to kai vandho nathi */
 }
 
 .shop-now {
-  font-size: 24px;
+    font-size: 18px;
+}
+.shop-now:hover {
+    text-decoration: 2px solid underline;
 }
 
 /* 
