--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,18 @@
     height: 100vh;
     padding-top: 60px;
 }
+
+.name-footer-zalak {
+    position: relative;
+    padding-bottom: 10px;
+    left: 0;
+    right: 0;
+    bottom: 40px;
+    height: 20px;
+    text-align: center;
+    color: grey;
+}
+
+.profile-link-zalak {
+    margin-left: 8px;
+}
