--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -55,10 +55,12 @@
 
 .footer-end {
     /* border: 10px solid green; */
-    margin-top: 40px;
+    margin-top: 60px;
+    margin-bottom: 30px;
     display: flex;
     font-size: 20px;
     padding: 20px;
+    padding-top: 90px;
     justify-content: center;
 }
 
